<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10px" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_root"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"                  
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />
            
            <TextView android:id="@+id/copyright"
                android:text="@string/copyright"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:paddingBottom="10dp" />
            
            <TextView android:id="@+id/distribution"
                android:text="@string/distribution"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:paddingBottom="10dp" /> 
            
            <TextView android:id="@+id/description"
                android:text="@string/description" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:paddingBottom="5dp" />              
            
            <TextView android:id="@+id/open_source"
                android:text="@string/open_source"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:paddingBottom="10dp"
                android:autoLink="web" />
           
            <TextView android:id="@+id/license"
                android:text="@string/license" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF" />
            
            <TextView android:id="@+id/credit_piano"
                android:text="@string/credit_piano" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>